Real-Cafe-Frontend/src/OrderForm.css
/* Base styles for larger screens */

.order-form {
  display: flex;
  flex-direction: row;
}

.menu-container {
  flex: 2.3;
  margin-right: 20px;
  display: flex;
  flex-direction: column;
}

.nav-bar {
  display: flex;
  flex-direction: row;  
  flex-wrap: wrap;
  justify-content: space-around;
  width: 80%;
  align-self: center;
  /* margin-bottom: 20px; */
}

.nav-button {
  margin-right: 0px;
  margin-left: 0px;
  margin-bottom: 10px;
  padding: 20px;
  cursor: pointer;
  border: none;
  background-color: #4e3928;
  color: #ece0d1;
  border-radius: 8px;
  font-weight: 600;
}

.nav-button.active {
  background-color: #ece0d1;
  color: #4e3928;
  font-weight: 600;
}
.menu-section ul {
  margin-left: 0;
  padding-left: 0px;
}
.menu-section li {
  display: flex;
  justify-content: space-between;
}

.menu-header {
  margin-bottom: 5px;
  font-weight: 700;
  color: #4e3928;
}
li.menu-header {
  border-color: black;
  border-bottom-width: 2px;
  border-bottom-style: solid;
}
span.header-stock {
  flex: 1.5;
}
span.header-name {
  flex: 3;
}
span.header-price {
  flex: 2;
}
span.header-add {
  flex: 1;
  align-items: center;
  text-align: center;
}

.menu-item {
  margin-bottom: 10px;
  justify-content: space-between;
  display: flex;
}

.item-stock {
  flex: 1.5;
  font-weight: 500;
  align-items: center;
  text-align: left;
  text-indent: 15px;
}

.item-name {
  text-align: left;
  font-weight: 500;
  flex: 3;
}

.item-price {
  text-align: left;
  flex: 2;
  font-weight: 500;
}

.add-icon {
  width: 20px; /* Adjust the size as needed */
  height: 20px;
}

.item-add {
  flex: 1;
  align-items: center;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
}

li button {
  width: 60px; /* Adjust this width as necessary */
  text-align: center;
}

.item-add,
.item-add-placeholder {
  flex: 1;
  align-items: center;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
}

/* CHEKOUT PESANAN */

/* PARENT */
.order-summary {
  flex: 2;
  display: flex;
  flex-direction: column;
  overflow-x: visible;
}
.order-summary ul {
  padding-left: 10px;
}

/* CHILD */
.order-item {
  margin-bottom: 5px;
  font-weight: 500;
}
/* Remove the spinners for WebKit browsers */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Remove the spinners for Firefox */
input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield; /* Standard property */
}

.order-name {
  flex: 3;
  font-weight: 500;
}
.order-price {
  flex: 3;
  align-items: right;
  text-align: left;
  text-indent: 20px;
}

.order-qty-container {
  flex: 2;
  display: flex;
}
.order-remove {
  align-items: right;
  width: 35px;
  color: white;
  background-color: red;
  border-radius: 8px;
  border-color: red;
  font-weight: 800;
  justify-content: right;
  align-content: right;
  cursor: pointer;
}
.order-qty-button {
  flex: 1;
  font-weight: 600;
  font-size: 20px;
  color: #ece0d1;
  background-color: #4e3928;
  border: none;
  border-radius: 8px;
  cursor: pointer;
}
input.order-qty-input {
  flex: 1;
  margin-left: 5px;
  margin-right: 5px;
  border: none;
  background: transparent;
  color: #4e3928;
  font-weight: 700;
  font-size: 16px;
  text-align: center;
  align-items: center;
  align-content: center;
  width: 5px;
  -webkit-appearance: none;
  -moz-appearance: textfield;
  appearance: textfield; /* Standard property */
}

/* FORM INPUT BAGIAN BAWAH */
.error-message {
  color: red;
  font-weight: bold;
  margin-top: 10px;
}
.order-form-input {
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.order-form-message {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.order-form-message .message-input {
  align-items: center;
  justify-content: center;
  border-color: #4e3928;
  border-radius: 12px;
  font-size: 16px;
  text-indent: 10px;
  margin-top: 10px; /* Add margin on top to separate from Meja No */
  width: 95%;
  height: 50%;
  resize: none;
  background-color: #ecd9c4;
}

.order-form-meja h3 {
  margin-right: 10px;
}
.order-form-meja {
  display: flex;
  flex-direction: row;
  margin-top: 10px;
}

.order-form-meja input {
  background-color: #ecd9c4;
  border-color: #4e3928;
  border-radius: 8px;
  width: 60px;
  height: 100%;
  align-items: center;
  position: relative;
  font-size: 20px;
  padding-top: 5px;
  text-align: center;
  padding-right: 5px;
  margin-top: 15px;
  display: inline-block;
    white-space: wrap; /* Prevent text from wrapping */
    overflow: visible; /* Hide overflow content */
}
.order-form-input button{
  font-size: 20px;
  border-radius: 12px;
  border-color: #4e3928;
  background-color: #4e3928;
  color: #ecd9c4;
  cursor: pointer;
}

/* Media Queries for Portrait Mode on Phones */

/* Mobile styles for screens with max width of 600px */
@media (max-width: 600px) {
  .order-form {
    flex-direction: column;
    padding: 10px;
  }

  .menu-container {
    flex: none;
    margin-right: 0;
  }

  .nav-bar {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }

  .nav-button {
    margin: 5px;
    padding: 8px;
    font-size: 14px;
  }

  .menu-section ul {
    padding-left: 0;
  }

  .menu-section li {
    flex-direction: row;
    margin-bottom: 15px;
  }
  .menu-header{
    font-size: 12px;
  }

  .menu-item {
    flex-direction: column;
    align-items: center;
    margin-bottom: 15px;
  }

  .item-stock, .item-name, .item-price {
    font-size: 12px;
    text-align: left;
  }

  .item-add {
    margin-top: 10px;
  }

  .order-summary {
    flex: none;
    margin-top: 20px;
  }

  .order-item {
    flex-direction: row;
    align-items: center;
    margin-bottom: 10px;
  }

  .order-name, .order-price {
    font-size: 12px;
  }

  .order-qty-container {
    flex-direction: row;
    align-items: center;
    display: flex;
  }

  .order-qty-button {
    font-size: 12px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 50%;

  }

  input.order-qty-input {
    width: 8px;
    font-size: 16px;
    margin: 0;
    padding: 0;
  }

  .order-remove {
    /* width: 15px;
    height: 15px; */
    font-size: 10px;
    padding: 0;
    margin: 0;

  }

  .error-message {
    font-size: 14px;
  }

  .order-form-input {
    flex-direction: column;
    align-items: center;
  }

  .order-form-message .message-input {
    width: 100%;
    font-size: 14px;
    height: auto;
    margin-top: 5px;
  }

  .order-form-meja {
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
  }

  .order-form-meja input {
    width: 80%;
    font-size: 16px;
    margin-top: 5px;
  }

  .order-form-input button {
    font-size: 18px;
    padding: 10px;
  }
}

